gifs starting and stopping on click. flex wrap implemented for gif div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
-#gif-dump {
-    float: left;
+.classDump {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .btn {
